fixing collapse resizing issue

--- a/src/sass/_agendaItemMaintenance.scss
+++ b/src/sass/_agendaItemMaintenance.scss
@@ -48,7 +48,7 @@
     }
 
     .remarks-text {
-      // float: left;
+      float: left;
       font-size: 1.1em;
       margin-right: .7rem;
       margin-top: 3px;
@@ -105,9 +105,8 @@
         border-radius: 5px;
         color: $primary-blue;
         background-color: $color-white;
-        // display: inline-block;
         padding: 10px 20px;
-        float: right; // keep this
+        float: right;
         font-size: 1.4rem;
       }
 
@@ -237,7 +236,6 @@
   }
 
   .maintenance-container-left {
-    // float: left; // can remove?
     height: 98vh;
     overflow-y: auto;
     padding: 0 10px 20px 0;
@@ -252,7 +250,6 @@
   }
 
   .maintenance-container-left-expanded {
-    // float: left; // can remove
     height: 98vh;
     overflow-y: auto;
     padding: 0 0 20px 0;
@@ -276,7 +273,6 @@
 
   .maintenance-container-right {
     background-color: $color-white;
-    // float: left; // can remove
     height: 98vh;
     margin-left: 20px;
     margin-right: 10px;
@@ -330,7 +326,7 @@
 
   .language-details > span {
     border-left: 1px solid $bg-gray-medium-1;
-    float: inherit; // keep this
+    float: inherit;
     margin-left: 10px;
     padding-left: 10px;
   }
@@ -417,6 +413,7 @@
 
 .stacked {
   display: block;
+  width: 99%;
 
   .maintenance-container-left-expanded {
     border-bottom: 3px solid $color-black;
@@ -424,31 +421,11 @@
 
   .maintenance-container-right {
     margin-top: 20px;
-    width: 98%;
-  }
-}
-
-@media screen and (min-width: 1441px) and (max-width: 1600px) {
-  .stacked {
     width: 99%;
-  }
-}
 
-@media screen and (min-width: 1367px) and (max-width: 1440px) {
-  .stacked {
-    width: 95%;
-  }
-}
-
-@media screen and (min-width: 1201px) and (max-width: 1366px) {
-  .stacked {
-    width: 90%;
-  }
-}
-
-@media screen and (min-width: 1100px) and (max-width: 1200px) {
-  .stacked {
-    width: 77%;
+    @media screen and (max-width: 1600px) {
+      margin-left: 0px;
+    }
   }
 }
 
